# LSR-Plot-GUI

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mymodel.h  tplot.cpp  tplot.h
